Little fix on ios Safari's animation.

--- a/game-styles.css
+++ b/game-styles.css
@@ -91,5 +91,7 @@
 
 #action-button:active {
   transform: scale(1.02);
+  -webkit-transform: scale(1.02) translateZ(0);
   transition: transform 0.2s;
+  -webkit-transition: -webkit-transform 0.2s;
 }
