--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,9 @@ button[type="submit"]:hover {
 
 button[type="submit"]:active {
   transform: scale(1.02);
+  -webkit-transform: scale(1.02) translateZ(0);
   transition: transform 0.1s;
+  -webkit-transition: -webkit-transform 0.1s;
 }
 
 nav {
